@@ -1,24 +1,26 @@
 package org.hzt.graph;
 
 import org.hzt.utils.It;
+import org.hzt.utils.collections.ListX;
+import org.hzt.utils.collections.MapX;
 import org.hzt.utils.sequences.Sequence;
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.Map;
 import java.util.NoSuchElementException;
+import java.util.Optional;
 import java.util.Set;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 
 class NodeTest {
 
     @Test
     void testBreadthFirstSequence() {
-        var graph = buildGraph();
+        var graph = buildTrainNet();
 
         final var stationNames = graph.get("Leiden").breadthFirstSequence()
                 .onEach(It::println)
@@ -30,36 +32,52 @@ class NodeTest {
 
     @Test
     void testFindRouteWithLeastStops() {
-        var graph = buildGraph();
+        var graph = buildTrainNet();
 
-        final var source = graph.get("Leiden");
-        final var target = graph.get("Vlissingen");
+        final var leiden = graph.get("Leiden");
+        final var vlissingen = graph.get("Vlissingen");
 
-        var leastStopsPath = source.breadthFirstSequence()
-                .first(target::equals)
+        List<String> visitedStation = new ArrayList<>();
+
+        var leastStopsPath = leiden.breadthFirstSequence(Node.Mode.SET_PREDECESSORS)
+                .first(vlissingen::equals)
                 .predecessorSequence()
                 .onEach(n -> System.out.println(n.predecessorSequence().count()))
-                .toListOf(station -> station.name);
+                .map(station -> station.name)
+                .onEach(visitedStation::add)
+                .toList();
 
-        assertEquals(List.of("Vlissingen", "Middelburg", "Bergen op zoom", "Utrecht", "Leiden"), leastStopsPath);
+        assertAll(
+                () -> assertEquals(List.of("Vlissingen", "Middelburg", "Bergen op zoom", "Utrecht", "Leiden"), leastStopsPath),
+                () -> assertEquals(leastStopsPath, visitedStation)
+        );
     }
 
     @Test
     void testFindTouristicRoute() {
-        var graph = buildGraph();
+        var trainNet = buildTrainNet();
 
-        final var source = graph.get("Leiden");
+        final RailWayStation leiden = trainNet.get("Leiden");
 
-        final var vlissingen = source.depthFirstSequence().onEach(System.out::println).first(graph.get("Vlissingen")::equals);
+        List<String> visitedStation = new ArrayList<>();
 
-        var leastStopsPath = vlissingen.predecessorSequence().take(100).toListOf(station -> station.name);
+        final var vlissingen = leiden.depthFirstSequence(Node.Mode.SET_PREDECESSORS)
+                .onEach(It::println)
+                .onEach(s -> visitedStation.add(0, s.name))
+                .first(trainNet.get("Vlissingen")::equals);
 
-        assertEquals(Collections.singletonList("Vlissingen"), leastStopsPath);
+        var leastStopsPath = vlissingen.predecessorSequence().toListOf(station -> station.name);
+        final var expected = List.of("Vlissingen", "Middelburg", "Bergen op zoom", "Tilburg", "Utrecht", "Amsterdam", "Leiden");
+
+        assertAll(
+                () -> assertEquals(expected, leastStopsPath),
+                () -> assertEquals(expected, visitedStation)
+        );
     }
 
     @Test
     void testFindRouteWithLeastStopsNoRoute() {
-        var graph = buildGraph();
+        var graph = buildTrainNet();
 
         final var source = graph.get("Leiden");
 
@@ -71,7 +89,7 @@ class NodeTest {
 
     @Test
     void testDepthFirstSequence() {
-        var graph = buildGraph();
+        var graph = buildTrainNet();
 
         final var stationNames = graph.get("Leiden").depthFirstSequence()
                 .map(railWayStation -> railWayStation.name)
@@ -80,9 +98,9 @@ class NodeTest {
         assertEquals(List.of("Leiden", "Amsterdam", "Utrecht", "Tilburg", "Bergen op zoom", "Middelburg", "Vlissingen", "Rotterdam", "Den Haag"), stationNames);
     }
 
-    private Map<String, RailWayStation> buildGraph() {
-        final var map = Sequence.of(
-                "Leiden",
+    private MapX<String, RailWayStation> buildTrainNet() {
+        final var map = ListX.of(
+                        "Leiden",
                         "Amsterdam",
                         "Den Haag",
                         "Rotterdam",
@@ -92,19 +110,18 @@ class NodeTest {
                         "Tilburg",
                         "Bergen op zoom",
                         "Timbuktu")
-                .associateWith(RailWayStation::new)
-                .toMap();
+                .associateWith(RailWayStation::new);
 
         map.get("Leiden").bidiAddNeighbors(Sequence.of(
                 "Amsterdam",
                 "Den Haag",
                 "Utrecht").toListOf(map::get));
-        map.get("Utrecht").bidiAddNeighbors(Sequence.of(
+        map.get("Utrecht").bidiAddNeighbors(ListX.of(
                 "Tilburg",
                 "Bergen op zoom",
                 "Den Haag",
                 "Amsterdam",
-                "Rotterdam").toListOf(map::get));
+                "Rotterdam").map(map::get));
         map.get("Bergen op zoom").bidiAddNeighbors(List.of(
                 map.get("Middelburg").bidiAddNeighbor(map.get("Vlissingen")),
                 map.get("Tilburg"),
@@ -132,13 +149,19 @@ class NodeTest {
         }
 
         @Override
-        public Set<RailWayStation> getNeighbors() {
-            return neighbors;
+        public Iterator<RailWayStation> neighborIterator() {
+            return neighbors.iterator();
         }
 
         @Override
-        public RailWayStation getPredecessor() {
-            return predecessor;
+        public Set<RailWayStation> getMutableNeighbors() {
+            return neighbors;
+        }
+
+
+        @Override
+        public Optional<RailWayStation> optionalPredecessor() {
+            return Optional.ofNullable(predecessor);
         }
 
         @Override
